--- a/assets/scss/settings.scss
+++ b/assets/scss/settings.scss
@@ -1,5 +1,5 @@
 @forward 'vuetify/settings' with (
-  $button-color: blue,
+  // $button-color: blue,
   $button-font-weight: 900,
   $button-border: 10px,
   $button-font-size: 10px
